# homeassistant-trmnl-battery

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: validate.yml
changelog/: 1.0.0.md
custom_components/trmnl/: __init__.py  api.py  config_flow.py  const.py  manifest.json  sensor.py  strings.json
example_data/: api_devices_response.json  curl_example.md
